Shrunk bookmarks to content size and fixed button alignment issues

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -99,19 +99,20 @@ html {
     padding: 2rem auto;
     font-size: 1rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     
     @media screen and (min-width: $desktop) {
-        width: 14rem;
-        height: 14rem;
-        padding: auto;
-        flex-direction: column;
+        // width: 14rem;
+        width: clamp(16rem, 30%, 20rem);
+        height: fit-content;
+        padding: 0;
+        flex-direction: column-reverse;
         align-self: center;
     }
     @media screen and (max-height: $tab) {
         width: 100%;
         height: clamp(3.2rem, 25vh, 80%);
-        flex-direction: row;
+        flex-direction: row-reverse;
     }
 
     button {
@@ -124,6 +125,9 @@ html {
         border: none;
         border-radius: 3rem;
         cursor: default;
+        &:hover {
+            background-image: linear-gradient(to bottom, hsl(238, 85%, 25%) 0%, hsl(238, 85%, 19%) 100%);
+        }
     }
 
     .urlTextBox {
@@ -132,8 +136,7 @@ html {
         text-align: start;
         padding-left: 1rem;
         margin-top: 0.5rem;
-        padding-bottom: 0.5rem;
-        // height: fit-content;
+        height: fit-content;
         max-height: 100%;
         width: 100%;
         font-size: 1.4rem;
@@ -148,13 +151,12 @@ html {
             padding-top: 1rem;
             text-overflow:ellipsis;
             // overflow-x: hidden;
-            margin-top: 2rem;
             >div {
                 padding-right: 0.2rem;
                 padding-left: 0.2rem;
-                margin-top: 0.6rem;
+                // margin-top: 0.6rem;
                 text-overflow: ellipsis;
-                max-height: 1.5rem;
+                // max-height: 2rem;
                 overflow: hidden;
             }
         }
@@ -167,13 +169,16 @@ html {
     
     
     .boxButtons {
-        flex: 1 1 auto;
+        flex: 1 1 content;
         display: flex;
         justify-content: space-around;
-        text-align:center;
+        text-align: center;
         gap: 1.5rem;
         padding-right: 1rem;
         @media screen and (min-width: $desktop) and (min-height: $tab) {
+            flex: 0;
+            margin-top: 1rem;
+            margin-bottom: 2rem;
             padding-right: 0rem;
         }
 
@@ -232,7 +237,7 @@ html {
     }
 
     input[type=text] {
-        @extend input[type=url];
+        @extend [type=url];
         margin-bottom: 0.5rem;
         width: 35%;
     }
